Fixed up some spacing issues

--- a/public/static/css/app.css
+++ b/public/static/css/app.css
@@ -25,9 +25,9 @@
 
 /* Spectatr tiles */
 .tile {
-  background-color: #E0E0E0
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
-
 
 /* Loading animation */
 .loading {
